! template adjustments, mostly to prevent image overflows

--- a/template/awards.css
+++ b/template/awards.css
@@ -1,17 +1,17 @@
 .award_poster_1 {
 	margin: 0 0 10px 15px;
 	padding: 0 4px 2px;
-	border: 1px #CCCCCC solid;
 	text-align: left;
+	border: 1px #CCCCCC solid;
 }
 
 .award_poster_2 {
 	margin: 0 0 10px 15px;
 	padding: 0 4px 2px;
+	text-align: left;
 	border: none;
 	border-top: 1px #CCCCCC solid;
 	border-radius: 0;
-	text-align: left;
 }
 
 .award_poster_3 {
@@ -50,9 +50,9 @@
 
 #awardselect select, #profile_boards {
 	min-width: 100%;
+	height: auto;
 	min-height: 0;
 	max-height: none;
-	height: auto;
 }
 
 #awardselect dt {
@@ -73,18 +73,18 @@ dl.settings dt a img.award_icon_help {
 #select_award_type .content {
 	float: left;
 	overflow: auto;
-	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	margin: 2px 0.166%;
-	padding: 10px 10px 4px 10px;
 	width: 33%;
 	height: 7em;
+	margin: 2px 0.166%;
+	padding: 10px 10px 4px 10px;
 }
 
 #select_award_type .content label:hover {
-	text-decoration: underline;
 	cursor: pointer;
+	text-decoration: underline;
 }
 
 #select_award_type .smalltext {
@@ -93,4 +93,29 @@ dl.settings dt a img.award_icon_help {
 
 #awardselect {
 	overflow-x: hidden;
+}
+
+.award_mini_image {
+	max-width: 65px;
+}
+
+.award_regular_image {
+	max-width: 140px;
+}
+
+#award_assigned {
+	display: flex;
+	align-items: center;
+	justify-content: center
+}
+
+#award_assigned img {
+	max-width: 100%;
+	padding: 0 5px;
+	vertical-align: middle;
+}
+
+#award_assigned > div {
+	width: 45%;
+	padding: 0 1.5em;
 }
